--- a/exploration/update_pyro_data.ipynb
+++ b/exploration/update_pyro_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# with auspice JSONs\n",
+    "\n",
     "region = \"california\"\n",
     "tree_json = f\"/home/phoenix/code/nf-epigen/jsons/ncov_{region}.json\"\n",
+    "\n",
+    "with open(tree_json) as f:\n",
+    "        tree = json.load(f)\n",
+    "        \n",
     "phylogeny = json_to_tree(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with newicks\n"
    ]
   },
   {
@@ -1099,9 +1114,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyro_epigen]",
+   "display_name": "pyro_epigen",
    "language": "python",
-   "name": "conda-env-pyro_epigen-py"
+   "name": "pyro_epigen"
   },
   "language_info": {
    "codemirror_mode": {
