--- a/exploration/update_pyro_data.ipynb
+++ b/exploration/update_pyro_data.ipynb
@@ -234,6 +234,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(715616.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_cases = list(df[\"new_cases\"])\n",
+    "if new_cases[-1] == 0:\n",
+    "    new_cases.pop(-1)\n",
+    "new_cases = torch.tensor(new_cases, dtype=torch.double)\n",
+    "print(new_cases.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -374,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -382,8 +403,8 @@
      "output_type": "stream",
      "text": [
       "INFO \t Running inference...\n",
-      "Warmup:   0%|          | 0/400 [00:00, ?it/s]INFO \t Heuristic init: R0=3.07, k=0.88, rho=0.341\n",
-      "Sample: 100%|██████████| 400/400 [00:58,  6.90it/s, step size=1.71e-03, acc. prob=0.897]\n"
+      "Warmup:   0%|          | 0/400 [00:00, ?it/s]INFO \t Heuristic init: R0=0.863, k=0.352, rho=0.337\n",
+      "Sample: 100%|██████████| 400/400 [00:19, 20.64it/s, step size=2.78e-05, acc. prob=0.521]\n"
      ]
     }
    ],
